tests/reference/asr_disable_style_and_warnings-save4-230ea36.stderr
semantic error: Variable 'x' is not declared
 --> tests/save4.f90:6:9
  |
6 |     if (x .eq. 1) then
  |         ^ 'x' is undeclared
